Added simple lexer

--- a/LispInterpreter/LispInterpreter.csproj
+++ b/LispInterpreter/LispInterpreter.csproj
@@ -8,5 +8,6 @@
   <ItemGroup>
     <Folder Include="Values\" />
     <Folder Include="REPL\" />
+    <Folder Include="Lexer\" />
   </ItemGroup>
 </Project>
